// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarketplaceStatusSection MarketplaceStatusSection should match a snapshot 1`] = `
<div>
  <GridFourColItem
    key="test"
  >
    <Checkbox
      id="test"
      labelText=""
      name="scopes"
      value="test"
    />
  </GridFourColItem>
  <div
    className="has-text-danger has-text-right w-100"
    data-test="input-error"
  >
    test
  </div>
</div>
`;

exports[`MarketplaceStatusSection should match a snapshot 1`] = `
<FormSection>
  <FormHeading>
    Permissions *
  </FormHeading>
  <FormSubHeading>
    To access a client's data, you will need to specify the entities you need access to on a read or write basis. You should be familiar with these entities from the sandbox. When the user installs your application, they will have to consent to your usage based on these permissions. If you do not have the correct permissions on an entity basis, your app will receive a 403 error.
  </FormSubHeading>
  <GridFourCol>
    <GridFourColItem
      key="test"
    >
      <Checkbox
        id="test"
        labelText=""
        name="scopes"
        value="test"
      />
    </GridFourColItem>
    <div
      className="has-text-danger has-text-right w-100"
      data-test="input-error"
    >
      test
    </div>
  </GridFourCol>
</FormSection>
`;
